--- a/styles/style1.css
+++ b/styles/style1.css
@@ -1,9 +1,10 @@
 
 #hilfes{
-	background-color:#0000ff;
+	background-color:#d9534f;
 	text-decoration:italic;
 	color:white;
-	font-family:comic sans ms;
+	font-family:calibri;
+	font-size:24px;
 }
 
 #difference{
